--- a/app.json
+++ b/app.json
@@ -1,4 +1,5 @@
 {
+  "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.innr",
   "name": {
     "en": "INNR Lighting Devices"
@@ -61,7 +62,7 @@
           {
             "name": "device",
             "type": "device",
-            "filter": "driver_id=dimmable_bulb|dimmable_e14|dimmable_gu10|dimmable_puck|dimmable_spot|led_strip|rgbw_bulb|rgbw_bulb_z3|rgbw_strip|rgbw_e14|rgbw_gu10|tunable_bulb|tunable_e14|tunable_gu10|RSL110V2|filament_bulb_vintage|filament_bulb_white|big_filament_bulb_vintage|long_filament_bulb_vintage|rgbw_ofl|rgbw_osl"
+            "filter": "driver_id=dimmable_bulb|dimmable_e14|dimmable_gu10|dimmable_puck|dimmable_spot|led_strip|rgbw_bulb|rgbw_bulb_z3|rgbw_strip|rgbw_e14|rgbw_gu10|tunable_bulb|tunable_e14|tunable_gu10|RSL110V2|filament_bulb_vintage|filament_bulb_white|big_filament_bulb_vintage|long_filament_bulb_vintage|rgbw_ofl|rgbw_osl|rgbw_opl"
           },
           {
             "name": "direction",
@@ -108,7 +109,7 @@
           {
             "name": "device",
             "type": "device",
-            "filter": "driver_id=dimmable_bulb|dimmable_e14|dimmable_gu10|dimmable_puck|dimmable_spot|led_strip|rgbw_bulb|rgbw_bulb_z3|rgbw_strip|rgbw_e14|rgbw_gu10|tunable_bulb|tunable_e14|tunable_gu10|RSL110V2|filament_bulb_vintage|filament_bulb_white|big_filament_bulb_vintage|long_filament_bulb_vintage|rgbw_ofl|rgbw_osl"
+            "filter": "driver_id=dimmable_bulb|dimmable_e14|dimmable_gu10|dimmable_puck|dimmable_spot|led_strip|rgbw_bulb|rgbw_bulb_z3|rgbw_strip|rgbw_e14|rgbw_gu10|tunable_bulb|tunable_e14|tunable_gu10|RSL110V2|filament_bulb_vintage|filament_bulb_white|big_filament_bulb_vintage|long_filament_bulb_vintage|rgbw_ofl|rgbw_osl|rgbw_opl"
           }
         ]
       }
@@ -215,7 +216,8 @@
       "zigbee": {
         "manufacturerName": "innr",
         "productId": [
-          "RSL 110"
+          "RSL 110",
+          "RSL 115"
         ],
         "deviceId": 256,
         "profileId": 49246,
@@ -1212,8 +1214,8 @@
         "profileId": 49246,
         "learnmode": {
           "instruction": {
-            "en": "Toggle the bulb to start pairing.\n\nIf pairing does not automatically start within 20 seconds, try resetting the device by toggling it 6 times with a 5 second interval. It will flash to indicate it has been reset.",
-            "nl": "Zet de lamp uit en weer aan.\n\nWordt de lamp niet automatisch toegevoegd binnen 20 seconden, probeer dan de lamp te resetten door hem 6 keer aan en uit te zetten met 5 seconden tussenpozen. De lamp zal knipperen om aan te geven dat hij is gereset."
+            "en": "Power On the ledstrip to start pairing.\n\nIf pairing does not automatically start within 20 seconds, try resetting the ledstrip by toggling the power 6 times with a 1 second interval. It will flash to indicate it has been reset.",
+            "nl": "Zet de ledstrip uit en weer aan.\n\nWordt de ledstrip niet automatisch toegevoegd binnen 20 seconden, probeer dan de ledstrip te resetten door hem 6 keer aan en uit te zetten met 1 seconden tussenpauze. De ledstrip zal knipperen om aan te geven dat hij is gereset."
           }
         }
       },
@@ -1237,6 +1239,69 @@
         }
       ],
       "id": "rgbw_ofl"
+    },
+    {
+      "name": {
+        "en": "RGBW OPL Spots",
+        "nl": "RGBW OPL Spots"
+      },
+      "class": "light",
+      "capabilities": [
+        "onoff",
+        "dim",
+        "light_hue",
+        "light_saturation",
+        "light_temperature",
+        "light_mode"
+      ],
+      "capabilitiesOptions": {
+        "dim": {
+          "opts": {
+            "duration": true
+          }
+        },
+        "onoff": {
+          "setOnDim": false
+        }
+      },
+      "images": {
+        "large": "drivers/rgbw_opl/assets/images/large.png",
+        "small": "drivers/rgbw_opl/assets/images/small.png"
+      },
+      "zigbee": {
+        "manufacturerName": "innr",
+        "productId": [
+          "OPL 130 C"
+        ],
+        "deviceId": 528,
+        "profileId": 49246,
+        "learnmode": {
+          "instruction": {
+            "en": "Power On the device to start pairing.\n\nIf pairing does not automatically start within 20 seconds, try resetting the device by toggling the power 6 times with a 1 second interval. It will flash to indicate it has been reset.",
+            "nl": "Voorzie de voeding van stroom.\n\nWordt de controller niet automatisch toegevoegd binnen 20 seconden, probeer dan de controller te resetten door 6 keer de stroom te onderbreken met 1 seconde tussenpauze. De lampen zullen knipperen om aan te geven dat hij is gereset."
+          }
+        }
+      },
+      "settings": [
+        {
+          "id": "transition_time",
+          "type": "number",
+          "label": {
+            "en": "Transition Time",
+            "nl": "Overgangstijd"
+          },
+          "hint": {
+            "en": "This setting determines the time in seconds it takes to dim from one level to another.",
+            "nl": "Deze instelling bepaalt de duur in seconden van het dimmen van een niveau naar een ander."
+          },
+          "value": 1,
+          "attr": {
+            "min": 0,
+            "max": 6553
+          }
+        }
+      ],
+      "id": "rgbw_opl"
     },
     {
       "name": {
@@ -1275,8 +1340,8 @@
         "profileId": 49246,
         "learnmode": {
           "instruction": {
-            "en": "Toggle the bulb to start pairing.\n\nIf pairing does not automatically start within 20 seconds, try resetting the device by toggling it 6 times with a 5 second interval. It will flash to indicate it has been reset.",
-            "nl": "Zet de lamp uit en weer aan.\n\nWordt de lamp niet automatisch toegevoegd binnen 20 seconden, probeer dan de lamp te resetten door hem 6 keer aan en uit te zetten met 5 seconden tussenpozen. De lamp zal knipperen om aan te geven dat hij is gereset."
+            "en": "Power On the device to start pairing.\n\nIf pairing does not automatically start within 20 seconds, try resetting the device by toggling the power 6 times with a 1 second interval. It will flash to indicate it has been reset.",
+            "nl": "Voorzie de voeding van stroom.\n\nWordt de controller niet automatisch toegevoegd binnen 20 seconden, probeer dan de controller te resetten door 6 keer de stroom te onderbreken met 1 seconde tussenpauze. De lampen zullen knipperen om aan te geven dat hij is gereset."
           }
         }
       },
@@ -1331,7 +1396,10 @@
       },
       "zigbee": {
         "manufacturerName": "innr",
-        "productId": "FL 130 C",
+        "productId": [
+          "FL 120 C",
+          "FL 130 C"
+        ],
         "deviceId": 528,
         "profileId": 49246,
         "learnmode": {
